--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="theme-color" content="#6c63ff">
 <title>Мои стихи — Добавить</title>
 </head>
-<body data-page="create">
+<body data-page="create" data-theme="light">
   <main class="app-shell">
     <header class="app-header">
       <p class="eyebrow">Poetry App</p>
